Step3 리뷰 요청 (#2409)
* docs: 리뷰 반영 - 기능 목록 추가

* refactor: 리뷰 반영 - LottoNumber 캐싱

* refactor: 리뷰 반영 - PurchaseMoney 로 네이밍 변경

* refactor: 리뷰 반영 - ReturnRate 와 Dto 분리

* refactor: 리뷰 반영 - toString 재정의

* refactor: typo

* feature: 뷰 로직 구현

* test: Winner 보너스 번호 추가

* feature: Winner 보너스 번호 추가

* test: 로또 등수 테스트

* test: 로또 보너스번호 테스트

* test: 당첨번호 보너스 테스트

* feature: 보너스 번호 구현

* feature: 나머지 컴파일 에러 해결

* refactor: 리뷰 반영 - WinningLotto 이름 변경

* refactor: 리뷰 반영 - PurchaseMoney getter 제거

* refactor: 리뷰 반영 - Set 자료형 변경

* refactor: 리뷰 반영 - toRank 시그니처 변경

* refactor: 리뷰 반영 - LottoNumber getter 제거

* refactor: 리뷰 반영 - dto 삭제

* refactor: 리뷰 반영 - Map 의 key 변경

* refactor: 리뷰 반영 - 구매 갯수 getter 제거

Co-authored-by: sanghyeon <sanghyeon@finda.co.kr>