@@ -7,7 +7,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static java.util.Map.entry;
@@ -18,12 +17,14 @@ import static org.assertj.core.api.Assertions.assertThat;
 class GameResultTest {
 
     @Test
-    void 맞춘_개수를_입력_받아서_등수_와_카운트로_구성되는_맵을_생성() {
-        List<Long> hitCounts = Arrays.asList(3L, 4L, 5L, 6L);
+    void 등수_리스트를_입력받아서_등수_와_카운트로_구성되는_맵을_생성() {
+        List<LottoRank> ranks = List.of(LottoRank.values());
 
-        GameResult gameResult = new GameResult(hitCounts);
+        GameResult gameResult = new GameResult(ranks);
 
-        assertThat(gameResult.getRankCount()).containsExactly(
+        assertThat(gameResult.getResult()).containsExactly(
+                entry(LottoRank.ETC, 1),
+                entry(LottoRank.FIFTH, 1),
                 entry(LottoRank.FOURTH, 1),
                 entry(LottoRank.THIRD, 1),
                 entry(LottoRank.SECOND, 1),
@@ -34,17 +35,19 @@ class GameResultTest {
     @ParameterizedTest(name = "{displayName} -> [{index}] : 5000 / {0}  = {2}")
     @CsvSource(
             value = {
-                    "5000:3:1",
-                    "2000:3:2.5",
-                    "1000:3:5"
+                    "5000:FIFTH:1",
+                    "2000:FIFTH:2.5",
+                    "1000:FIFTH:5"
             },
             delimiter = ':'
     )
-    void 구매금액을_입력받아서_수익률을_계산(int purchaseAmount, Long hitCount, double returnRate) {
-        List<Long> hitCounts = List.of(hitCount);
+    void 구매금액을_입력받아서_수익률을_계산(int purchaseAmount, LottoRank rank, double returnRate) {
+        PurchaseMoney purchaseMoney = new PurchaseMoney(purchaseAmount);
+        List<LottoRank> input = List.of(rank);
+        GameResult gameResult = new GameResult(input);
 
-        GameResult gameResult = new GameResult(hitCounts);
+        ReturnRate result = gameResult.calculateReturnRate(purchaseMoney);
 
-        assertThat(gameResult.calculateReturnRate(purchaseAmount)).isEqualTo(returnRate);
+        assertThat(result).isEqualTo(new ReturnRate(returnRate));
     }
 }
